[gd_scene load_steps=3 format=3 uid="uid://dglr1wuy8b5h6"]

[ext_resource type="Script" path="res://scripts/info.gd" id="1_2fjc8"]
[ext_resource type="Texture2D" uid="uid://ud1r8dr03a7k" path="res://assets/screens/info.png" id="2_t0ier"]

[node name="Info" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2fjc8")

[node name="img" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("2_t0ier")

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 608.0
offset_right = 800.0
offset_bottom = 688.0

[node name="Settings" type="Button" parent="."]
layout_mode = 0
offset_left = 1170.0
offset_top = 35.0
offset_right = 1245.0
offset_bottom = 110.0

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 35.0
offset_right = 110.0
offset_bottom = 110.0

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
